Minor fixes for all the modals after whitespace fix

--- a/styles/components/_login-register.scss
+++ b/styles/components/_login-register.scss
@@ -510,11 +510,11 @@
 @media screen and (max-width: 480px) {
 
   .login_modal {
-    height: 52rem;
-    left: 45%;
-    top: 45%;
+    height: 54rem;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    width: 35rem;
+    width: 34rem;
     &__main {
       width: 100%;
       &__title {
@@ -539,10 +539,10 @@
 
   .register_modal {
     height: 58rem;
-    left: 45%;
-    top: 45%;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    width: 35rem;
+    width: 34rem;
     &__main {
       width: 100%;
       &__title {
