--- a/styles/components/_newsletter.scss
+++ b/styles/components/_newsletter.scss
@@ -146,8 +146,8 @@
 
   .newsletter_popup {
     height: 42rem;
-    width: 80%;
-    left: 45%;
+    width: 90%;
+    left: 50%;
     &__illustration {
       display: none;
     }
